--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
     width : 600px;
     margin-left : 10px;
     float:left;
-    height : inherit;
+    height : 200px;
     overflow:auto;
 }
 
@@ -47,6 +47,8 @@ html {
     background-color:orange;
     display:block;
     height:100px;
+    width:580px;
+    margin-top : -100px;
     padding : 10px 10px 10px 10px;
     overflow:auto;
 }
