--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,21 @@
 html {
     font-family : "Verdana";
 }
+
+#input_canvas {
+    margin-left : 10px;
+    margin-top : 10px;
+    margin-bottom : 10px;
+}
+
+#input_canvas #add_attribute {
+    margin-bottom : 10px;
+}
+
+#input_canvas #add_fd {
+    margin-bottom : 10px;
+}
+
 #main_canvas {
     width : 600px;
     margin-left : 10px;
