--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ html {
     font-family : "Verdana";
 }
 
+#operation_buttons {
+    margin-top : 50px;
+}
+
 #input_canvas {
     margin-left : 10px;
     margin-top : 10px;
